--- a/Kasir.html
+++ b/Kasir.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website Kasir</title>
     <link rel="stylesheet" href="styles.css" />
-
     <!-- Tambahkan link Font Awesome -->
     <link
       rel="stylesheet"
@@ -35,12 +34,8 @@
 
         <div class="summary">
           <h3>Order Summary</h3>
+          <ul id="summaryList" class="order-list"></ul>
 
-          <!-- Daftar pesanan (akan dirender oleh script.js) -->
-          <ul id="summaryList" class="order-list">
-          </ul>
-
-          <!-- Totals di bawah daftar -->
           <div class="summary-box" id="totalsBox">
             <div class="totals">
               <div class="row total">
@@ -78,7 +73,9 @@
               </label>
             </div>
           </div>
-
+          <div class="queue-number">
+            <p>Nomor Antrian: <span id="queueNumber">1</span></p>
+          </div>
           <button id="printReceipt" onclick="printReceipt()">Checkout</button>
         </div>
       </div>
